--- a/src/components/tools/index.scss
+++ b/src/components/tools/index.scss
@@ -62,7 +62,7 @@
             }
             &:hover {
                 cursor: pointer;
-                border: 2px solid lighten(#444444, 30%);
+                border: 2px solid lighten(#444444, $hoverLighthen);
             }
         }
         .sizeDiv:nth-child(2)::after {
@@ -97,7 +97,7 @@
             background-color: #3A3A3A;
             &:hover {
                 cursor: pointer;
-                background-color: lighten(#3A3A3A, 30%);
+                background-color: lighten(#3A3A3A, $hoverLighthen);
             }
             &:hover:after {
                 display: flex;
@@ -201,7 +201,7 @@
             }
             &:hover {
                 cursor: pointer;
-                border: 4px solid lighten(#444444, 30%);
+                border: 4px solid lighten(#444444, $hoverLighthen);
             }
         }
         .colorDiv:first-child::after {
@@ -257,7 +257,7 @@
                 }
                 &:hover {
                     cursor: pointer;
-                    color: lighten(#444444, 30%);
+                    color: lighten(#444444, $hoverLighthen);
                 }
                 &:hover:after{
                     display: block;
@@ -291,7 +291,7 @@
                 border-radius: 0.2vw;
             }
             &:hover {
-                color: lighten(#8E7A0E, 30%);
+                color: lighten(#8E7A0E, $hoverLighthen);
                 cursor: pointer;
             }
             &:hover:after {
